--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/src/assets/owllogo.jpeg" />
+  <!-- Mobile responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- SEO basics -->
+  <title>The Owl's Hut | Cafe and Coffee Shop</title>
+  <meta name="description" content="Order delicious food online from Foodify restaurant." />
+  <!-- Optional: Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <!-- React mounts here -->
+  <div id="root"></div>
+  <!-- Vite entry point -->
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
