--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/src/assets/owllogo.jpeg" />
+  <link rel="icon" type="image/svg+xml" href="/owllogo.jpeg" />
   <!-- Mobile responsiveness -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- SEO basics -->
