--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- SEO basics -->
   <title>The Owl's Hut | Cafe and Coffee Shop</title>
-  <meta name="description" content="Order delicious food online from Foodify restaurant." />
+  <meta name="description" content="Where thoughtful crafting meets timeless flavors." />
   <!-- Optional: Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 </head>
